--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,8 +1,8 @@
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://localhost:3306/autocontrollerstest?characterEncoding=UTF-8
-jdbc_username=root
-jdbc_password=
+jdbc_url=jdbc:mysql://localhost:3306/myapp?characterEncoding=UTF-8
+jdbc_username=uat	
+jdbc_password=uat
 initialSize=0
 maxActive=20
 maxIdle=20
